--- a/hw9/hw9.tex
+++ b/hw9/hw9.tex
@@ -1,4 +1,3 @@
-
 \documentclass[12pt,leqno]{article}
 
 \usepackage{amsmath,amsfonts,amssymb,amscd,amsthm,amsbsy,upref}
@@ -118,7 +117,7 @@ Let $a$, $b$, and $c$ be integers.  If $(b, c) = 1$, then $(a, bc) = (a, b) \cdo
 \end{thm}
 
 \begin{proof}[Solution]
-Let $a$, $b$, and $c$ be integers with $(b, c) = 1$.  By definition, $(a, b) \mid a$, and by theorem 1.6 $(a, b) \mid bc$.  Similarly, $(a, c) \mid a$ and $(a, c) \mid bc$.  Now by definition of gcd, $((a, b), (a, c))$ will be the greatest of all the divisors common to $a$, $b$, and $c$, which since $(b, c) = 1$, is 1.  So $(a, b) \cdot (a, c) \mid (a, bc)$. //TODO
+Let $a$, $b$, and $c$ be integers with $(b, c) = 1$.  By definition, $(a, b) \mid a$, and by theorem 1.6 $(a, b) \mid bc$.  Similarly, $(a, c) \mid a$ and $(a, c) \mid bc$.  Now by definition of gcd, $((a, b), (a, c))$ will be the greatest of all the divisors common to $a$, $b$, and $c$, which since $(b, c) = 1$, is 1.  So $(a, b) \cdot (a, c)$ is a divisor of both $a$ and $bc$.  //TODO Finish
 \end{proof}
 
 %%%Theorem 2.29%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
@@ -138,7 +137,13 @@ Let $a$ and $b$ be integers.  If $(a, b) = d$, then $({a \over d}, {b \over d}) 
 \end{thm}
 
 \begin{proof}[Proof]
-Let $a$ and $b$ be integers, with $(a, b) = d$. We will show that $({a \over d}, {b \over d}) = 1$.  //TODO
+Let $A$, $B$, and $D$  be prime factorizations of $a$, $b$, and $d$ respectively.  Theorem 2.12 assures us that there is no prime $p$ that is a part of $D$ but now $A$ or $B$.  So $a \over d$ will be $A \over D$, which can be found by subtracting expontents of common primes.  The same is true for $b$ and $d$.  //TODO finish
+
+%Now consider some integer $k$ such that $k \mid a$ and $k \mid b$ and its prime factorization $K$.  
+
+
+
+%Let $a$ and $b$ be integers, with $(a, b) = d$. We will show that $({a \over d}, {b \over d}) = 1$.  Let $k$ be any integer such that $k\mid a$ and $k\mid b$.  Let $p_1^{r_1}p_2^{r_2}\cdots p_m^{r_m}$ be the unique prime factorization of $a$, $q_1^{r_1}q_2^{r_2}\cdots q_s^{t_s}$ be the unique prime factorization of $b$, $x_1^{y_1}x_2^{y_2}\cdots x_z^{y_z}$ be the unique prime factorization of $d$, and $g_1^{h_1}g_2^{h_2}\cdots g_n^{h_n}$ be the unique prime factorization of $k$.  Now, because $d \mid a$ and $k \mid a$, by theorem 2.12 we have that for all integers $i \leq z$, there exists a $j \leq m$ and a $u \leq n$ such that $x_i = p_j = g_u$ and $y_i \leq r_j$ and $h_u \leq r_g$.  And because $k \leq d$m $h_u \leq y_i$  So the prime factorization of ${a \over d}$ will be a product of all the terms $p_j^{r_j - y_i}$ and all the $p_j^{r_j}$ where $p_j$ does not correspond to some $x_i$.  //TODO
 \end{proof}
 
 %%%Theorem 2.31%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
@@ -148,6 +153,6 @@ Let $a$, $b$, $u$, and $v$ be integers.  If $(a, b) = 1$ and $u \mid a$ and $v \
 \end{thm}
 
 \begin{proof}[Proof]
-Type your proof here!
+Let $a$, $b$, $u$, and $v$ be integers with $(a, b) = 1$ and $u \mid a$ and $v \mid b$. We will show $(u, v) = 1$. Let $A$, $B$, $U$, and $V$ represent the sets of primes in the unique prime factorizations of $a$, $b$, $u$, and $v$ respectively.  Let $p$ be any element of $A$.  If $p$ was also in $B$, then $(a, b)$ would be greater than or equal to $p$.  So $A \cap B$ is empty.  However, by theorem 2.12, $U$ is a subset of $A$ and $V$ is a subset of $B$, so $U \cap V$ must also be empty.  Therefore $(u, v) = 1$.
 \end{proof}
 \end{document}
