--- a/hw11/hw11.tex
+++ b/hw11/hw11.tex
@@ -1,4 +1,3 @@
-
 \documentclass[12pt,leqno]{article}
 
 \usepackage{amsmath,amsfonts,amssymb,amscd,amsthm,amsbsy,upref}
@@ -51,7 +50,7 @@
 
 \thispagestyle{plain}
 \begin{flushright}
-\large{\textbf{TYPE YOUR NAME HERE \\
+\large{\textbf{Geoffrey Parker \\
 HW 9: 2.25-2.31\\
 M328K \\
 February 16th, 2012 \\}}
