--- a/hw14/hw14.tex
+++ b/hw14/hw14.tex
@@ -50,7 +50,7 @@
 
 \thispagestyle{plain}
 \begin{flushright}
-\large{\textbf{TYPE YOUR NAME HERE \\
+\large{\textbf{Geoffrey Parker - grp352 \\
 HW 13: 3.4, 3.5, 3.7\\
 M328K \\
 March 8th, 2012 \\}}
@@ -79,7 +79,7 @@ number $k$, $0 \leq k \leq 11$, such that~$39^{453} \equiv k
 \end{ques}
 
 \begin{proof}[Solution]
-Type your solution here!
+3.
 \end{proof}
 
 %%%Exercise 3.5%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
@@ -88,7 +88,12 @@ Show that $39$ divides $17^{48}-5^{24}$.
 \end{exer}
 
 \begin{proof}[Solution]
-Type your solution here!
+\begin{align*}
+17^2 &\equiv 5 \pmod{39}\\
+{17^2}^{24} &\equiv 5^{24} \pmod {39} \\
+17^{48} &\equiv 5^{24} \pmod {39}\\
+39 &\mid 17^{48}-5^{24}
+\end{align*}
 \end{proof}
 
 \setcounter{thm}{6}
@@ -100,6 +105,6 @@ Let $f(x) = 13x^{49} - 27x^{27} + x^{14} - 6$.  Is it true that
 \end{ques}
 
 \begin{proof}[Solution]
-Type your solution here!
+
 \end{proof}
 \end{document}
