--- a/hw15/hw15.tex
+++ b/hw15/hw15.tex
@@ -81,7 +81,7 @@ then~$f(a) \equiv f(b) \pmod{m}$.
 \end{thm}
 
 \begin{proof}[Proof]
-Type your proof here!
+Suppose $f(x) = c_nx^n + c_{n-1}x^{n-1} + \hdots + c_0$ is a polynomial of degree $n>0$ with integer coefficients.  Let $a$, $b$, and $m$ be integers with $m > 0$ and $a \equiv b \pmod{m}$.  We will show $f(a) \equiv f(b) \pmod{m}$.  First, since $a \equiv b \pmod{m}$, we know that $a^k \equiv b^k \pmod{m}$ for any integer $k$ by theorem blah.  Combining with theorem blah, we can see that for each term in $f$, $c_{n-j}a^{n-j} \equiv c_{n-j}b^{n-j} \pmod{m}$, where $j$ is some integer such that $0 \leq j \leq n$.  Now, by theorem blah, since $c_na^n \equiv c_nb^n \pmod{m}$ and $c_{n-1}a^{n-1} \equiv c_{n-1}b^{n-1} \pmod{m}$, we have that $c_na^n + c_{n-1}a^{n-1} \equiv c_nb^n + c_{n-1}b^{n-1} \pmod{m}$.  By theorem blah again, $c_na^n + c_{n-1}a^{n-1} + c_{n-2}a^{n-2} \equiv c_nb^n + c_{n-1}b^{n-1} + c_{n-2}b^{n-2} \pmod{m}$.  We can apply this same logic for each term in $f(x)$ to show that $f(a) \equiv f(b) \pmod{m}$.
 \end{proof}
 
 %%%Corollary 3.9%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
@@ -92,7 +92,17 @@ Let the natural number $n$ be expressed in base $10$ as
 \end{cor}
 
 \begin{proof}[Proof]
-Type your proof here!
+Let the natural number $n$ be expressed in base $10$ as
+\[n = a_k a_{k-1} \hdots a_1 a_0. \]
+Let $m = a_k + a_{k-1} + \hdots + a_1 + a_0$. We will show that $9 \mid n$ if and only if $9 \mid m$.\\
+
+Let $f(x) = a_nx^n + a_{n-1}x^{n-1} + \hdots + a_0x^0$.  We can now express $n$ as $f(10)$ and $m$ as $f(1)$.  Since $10 - 1 = 9$, by definition of congruence mod n we have that $10 \equiv 1 \pmod{9}$.  So by theorem 3.8, $f(10) \equiv f(1) \pmod{9}$, or equivalently, $n \equiv m \pmod{9}$.  Therefore by definition of congruence mod n, $9 \mid n - m$.\\
+
+First, assume that $9 \mid m$.  In this case, $9 \mid m$ and $9 \mid n-m$, so by theorem 1.1? $9 \mid m + (n-m)$, that is $9\mid n$.\\
+
+Now assume that $9 \mid n$.  In this case, $9 \mid n$ and $9 \mid n-m$, so by theorem 1.2? $9 \mid n - (n-m)$, that is $9\mid m$.\\
+
+Therefore $9|n$ if and only if $9|m$.
 \end{proof}
 
 
@@ -105,6 +115,16 @@ if $3|m$.
 \end{cor}
 
 \begin{proof}[Proof]
-Type your proof here!
+Let the natural number $n$ be expressed in base $10$ as
+\[n = a_k a_{k-1} \hdots a_1 a_0. \]
+If $m = a_k + a_{k-1} + \hdots + a_1 + a_0$. We will show that $3|n$ if and only if $3|m$.\\
+
+Let $f(x) = a_nx^n + a_{n-1}x^{n-1} + \hdots + a_0x^0$.  We can now express $n$ as $f(10)$ and $m$ as $f(1)$.  Since $10 - 1 = 9$ and $3 \mid 9$, by definition of congruence mod n we have that $10 \equiv 1 \pmod{3}$.  So by theorem 3.8, $f(10) \equiv f(1) \pmod{3}$, or equivalently, $n \equiv m \pmod{3}$.  Therefore by definition of congruence mod n, $3 \mid n - m$.\\
+
+First, assume that $3 \mid m$.  In this case, $3 \mid m$ and $3 \mid n-m$, so by theorem 1.1? $3 \mid m + (n-m)$, that is $3\mid n$.\\
+
+Now assume that $3 \mid n$.  In this case, $3 \mid n$ and $3 \mid n-m$, so by theorem 1.2? $3 \mid n - (n-m)$, that is $3\mid m$.\\
+
+Therefore $3|n$ if and only if $3|m$.
 \end{proof}
 \end{document}
